m6809_run_SOURCES = 6809.c \
	command.c	\
	disk.c		\
	fileio.c	\
	imux.c		\
	ioexpand.c	\
	machine.c	\
	main.c		\
	mmu.c		\
	monitor.c	\
	serial.c 	\
	symtab.c	\
	timer.c		\
	simple.c	\
	eon.c		\
	eon2.c		\
	kipper1.c	\
	smii.c		\
	multicomp6809.c	\
	wpc.c		\
	wpclib.c

LIBS = $(READLINE_LIBS)

AM_CFLAGS=-Wall -Wextra

bin_PROGRAMS = m6809-run
